--- a/index.html
+++ b/index.html
@@ -1,12 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-     <meta charset="UTF-8">
-     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <title>Document</title>
-</head>
-<body>
-     
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Top five player select</title>
+    <!-- Tailwind CDN -->
+    <script src="https://cdn.tailwindcss.com"></script>
+    <!-- daisyUI -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/daisyui@2.24.0/dist/full.css"
+      rel="stylesheet"
+      type="text/css"
+    />
+  </head>
+  <body>
+    <!-- header section start  -->
+    <header>
+     <div class="text-center my-10">
+      <h1  class="text-6xl text-orange-600 mb-8">Top five player select</h1>
+      <p>
+        As a football bettor or simply a football enthusiast, it’s crucial to  be up to <br>date with all major events that have happened in  the<br>football world, be it on or off the pitch. 
+      </p>
+     </div>
+    </header>
+    <!-- header section end  -->
+    
+  </body>
 </html>
