header section update

--- a/index.html
+++ b/index.html
@@ -4,27 +4,22 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Top five player select</title>
-    <!-- Tailwind CDN -->
-    <script src="https://cdn.tailwindcss.com"></script>
-    <!-- daisyUI -->
+    <title>Total Cost Of Football Club</title>
+    <!-- bootstrap link -->
     <link
-      href="https://cdn.jsdelivr.net/npm/daisyui@2.24.0/dist/full.css"
       rel="stylesheet"
-      type="text/css"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
     />
   </head>
-  <body>
-    <!-- header section start  -->
+  <body class="bg-black">
+    <!-- header start -->
     <header>
-     <div class="text-center my-10">
-      <h1  class="text-6xl text-orange-600 mb-8">Top five player select</h1>
-      <p>
-        As a football bettor or simply a football enthusiast, it’s crucial to  be up to <br>date with all major events that have happened in  the<br>football world, be it on or off the pitch. 
-      </p>
-     </div>
-    </header>
-    <!-- header section end  -->
-    
+        <div class="py-5 mb-5">
+          <h1 class="text-center bg-dark text-danger">Total Cost Of Football Club</h1>
+          <p class="text-white text-center">Football has become a global sport in recent years. Several renowned billionaires have invested in it. Many now own multiple clubs. <br> This has led to an increase in their spending power and market value of several teams. So, if anyone needs to buy a club<br> they need to meet a particular asking price.This asking price is what is termed as purchase value</p>
+        </header>
+        </div>
+    <!-- header end -->
+
   </body>
 </html>
