--- a/index.html
+++ b/index.html
@@ -14,12 +14,71 @@
   <body class="bg-black">
     <!-- header start -->
     <header>
-        <div class="py-5 mb-5">
-          <h1 class="text-center bg-dark text-danger">Total Cost Of Football Club</h1>
+        <div class="py-5 mb-5 bg-dark">
+          <h1 class="text-center text-danger">Total Cost Of Football Club</h1>
           <p class="text-white text-center">Football has become a global sport in recent years. Several renowned billionaires have invested in it. Many now own multiple clubs. <br> This has led to an increase in their spending power and market value of several teams. So, if anyone needs to buy a club<br> they need to meet a particular asking price.This asking price is what is termed as purchase value</p>
         </header>
         </div>
     <!-- header end -->
-
+    <!-- main section start  -->
+      <main>
+        <div class="container">
+          <div class="row g-4 mb-5">
+            <!-- All player  -->
+            <!-- player 1 -->
+            <div class="col-md-3">
+              <div class="card text-center">
+                <img src="images/pic1.png" class="card-img-top" alt="..." />
+                <div class="card-body">
+                  <h5 class="card-title">Neymar Junior</h5>
+                  <div class="d-flex justify-content-evenly">
+                    <p>59 Goals</p>
+                    <p>187 Assist</p>
+                  </div>
+                  <button
+                    class="btn btn-primary px-5 select_btn"
+                    onclick="selectBtn(this)"
+                  >
+                    SELECT
+                  </button>
+                </div>
+              </div>
+            </div>
+            <!-- player 2 -->
+            <div class="col-md-3">
+              <div class="card text-center">
+                <img src="images/pic2.png" class="card-img-top" alt="..." />
+                <div class="card-body">
+                  <h5 class="card-title">Lionel Messi </h5>
+                  <div class="d-flex justify-content-evenly">
+                    <p>88 Goals</p>
+                    <p>208 Assist</p>
+                  </div>
+                  <button
+                    class="btn btn-primary px-5 select_btn"
+                    onclick="selectBtn(this)"
+                  >
+                    SELECT
+                  </button>
+                </div>
+              </div>
+            </div>
+            <!-- player 3 -->
+            <div class="col-md-3">
+              <div class="card text-center">
+                <img src="images/pic3.png" class="card-img-top" alt="..." />
+                <div class="card-body">
+                  <h5 class="card-title">Kylian Mbappe</h5>
+                  <div class="d-flex justify-content-evenly">
+                    <p>44 Goals</p>
+                    <p>142 Assist</p>
+                  </div>
+                  <button class="btn btn-primary px-5" onclick="selectBtn(this)">
+                    SELECT
+                  </button>
+                </div>
+              </div>
+            </div>
+            
   </body>
 </html>
