player card and select five added

--- a/index.html
+++ b/index.html
@@ -79,6 +79,79 @@
                 </div>
               </div>
             </div>
+            <!-- selected five section  -->
+            <!--  -->
+            <div class="col-md-3 bg-dark text-white">
+              <h2 class="text-center">Selected - Five</h2>
+              <!-- <ol type="1" >
+                          
+                  </ol> -->
+              <div id="player_name_list" class="text-center">
+                <ol type="1"></ol>
+              </div>
+            </div>
+            <!--  -->
+            <!-- player 4 -->
+            <div class="col-md-3">
+              <div class="card text-center">
+                <img src="images/pic4.png" class="card-img-top" alt="..." />
+                <div class="card-body">
+                  <h5 class="card-title">Cristiano Ronaldo</h5>
+                  <div class="d-flex justify-content-evenly">
+                    <p>54 Goals</p>
+                    <p>171 Assist</p>
+                  </div>
+                  <button
+                    class="btn btn-primary px-5 select_btn"
+                    onclick="selectBtn(this)"
+                  >
+                    SELECT
+                  </button>
+                </div>
+              </div>
+            </div>
+            <!-- player 5 -->
+            <div class="col-md-3">
+              <div class="card text-center">
+                <img src="images/pic5.png" class="card-img-top" alt="..." />
+                <div class="card-body">
+                  <h5 class="card-title">Sergio Ramos</h5>
+                  <div class="d-flex justify-content-evenly">
+                    <p>25 Goals</p>
+                    <p>72 Assist</p>
+                  </div>
+                  <button
+                    class="btn btn-primary px-5 select_btn"
+                    onclick="selectBtn(this)"
+                  >
+                    SELECT
+                  </button>
+                </div>
+              </div>
+            </div>
+            <!-- player 6 -->
+            <div class="col-md-3">
+              <div class="card text-center">
+                <img
+                  src="images/pic6.png"
+                  class="card-img-top"
+                  alt="..."
+                />
+                <div class="card-body">
+                  <h5 class="card-title">Ozil</h5>
+                  <div class="d-flex justify-content-evenly">
+                    <p>52 Goals</p>
+                    <p>165 Assist</p>
+                  </div>
+                  <button
+                    class="btn btn-primary px-5 select_btn"
+                    onclick="selectBtn(this)"
+                  >
+                    SELECT
+                  </button>
+                </div>
+              </div>
+            </div>
             
   </body>
 </html>
